[package]
name = "css-typegen"
version = "0.1.0"
edition = "2021"
authors = ["Gosub Community <info@gosub.io>"]
description = "Gosub browser using GTK"
license = "MIT"

[dependencies]
gosub_css3 = { version = "0.1.1", registry = "gosub" }
syn = {version = "2.0.98", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.93"
convert_case = "0.8.0"
indexmap = "2.8.0"
prettyplease = "0.2.31"